modules/alb/main.tf
resource "aws_lb" "alb" {
  name               = "${var.project}-alb-${var.env}"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = var.private_subnets
  idle_timeout       = var.idle_timeout

  tags = {
    Name        = "${var.project}-alb-${var.env}"
    Environment = var.env
    Project     = var.project
    Application = "${var.project}-${var.env}"
    ManagedBy   = "meroku"
  }
}

# Security Group for ALB
resource "aws_security_group" "alb" {
  name   = "${var.project}_alb_${var.env}"
  vpc_id = var.vpc_id

  ingress {
    protocol         = "tcp"
    from_port        = 80
    to_port          = 80
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    protocol         = "tcp"
    from_port        = 443
    to_port          = 443
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "${var.project}_alb_${var.env}"
    Environment = var.env
    Project     = var.project
    Application = "${var.project}-${var.env}"
    ManagedBy   = "meroku"
  }
}

# Create the HTTP Listener with Redirect to HTTPS
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}
